--- a/config/locales/views/recipes/ja.yml
+++ b/config/locales/views/recipes/ja.yml
@@ -11,3 +11,10 @@ ja:
       return: 戻る
     edit:
       title: レシピ更新
+      delete: 削除
+      modal_title: レシピ削除
+      question_recipe: "%{recipe}を削除しますか？"
+      delete_action: 削除する
+      chancel: キャンセル
+    index:
+      point: ズボラポイント
