--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,13 @@ ja:
         point: ズボラポイント
         new_image: 画像
         image: 画像
+        category_id: カテゴリー
+        category: カテゴリー
+      user:
+        email: メールアドレス
+        user_name: ニックネーム
+        avatar: プロフィール画像
+        password: パスワード
     errors:
       messages:
         record_invalid: 'バリデーションに失敗しました: %{errors}'
