--- a/config/locales/views/recipes/ja.yml
+++ b/config/locales/views/recipes/ja.yml
@@ -10,6 +10,7 @@ ja:
       edit: 編集
       return: 戻る
       category: カテゴリー
+      review_new: コメントする
     edit:
       title: レシピ更新
       delete: 削除
