enum機能の修正

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -23,8 +23,8 @@ ja:
       review:
         body: コメント
         evaluation: 評価
-        recipe_id: レシピ
-        recipe: レシピ
+        recipe_id: コメント
+        recipe: コメント
         user_id: ユーザー
         user: ユーザー
     errors:
